force-app/main/default/objects/Intacct_Payment_Log__c/Intacct_Payment_Log__c.object-meta.xml
<CustomObject>
    <label>Intacct Payment Log</label>
    <nameField>
        <label>Intacct Payment Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intacct Payment Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>