force-app/main/default/objects/Intacct_Payment_Log__c/fields/BoomOrder__c.field-meta.xml
<CustomField>
    <fullName>BoomOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Boom Order</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipLabel>Intacct Payment Logs</relationshipLabel>
    <relationshipName>Intacct_Payment_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>