force-app/main/default/objects/Intacct_Payment_Log__c/fields/BoomPayment__c.field-meta.xml
<CustomField>
    <fullName>BoomPayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Boom Order Payment</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Intacct Payment Logs</relationshipLabel>
    <relationshipName>Intacct_Payment_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>