force-app/main/default/objects/Intacct_Payment_Log__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>kugo2p__SalesOrder__c</referenceTo>
    <relationshipLabel>Intacct Payment Logs</relationshipLabel>
    <relationshipName>Intacct_Payment_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>