force-app/main/default/objects/Intacct_Payment_Log__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>kugo2p__PaymentX__c</referenceTo>
    <relationshipLabel>Intacct Payment Logs</relationshipLabel>
    <relationshipName>Intacct_Payment_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>